--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -322,7 +322,7 @@
     display: none;
   }
   .bottom_button {
-    position: sticky;
+    position: fixed;
     bottom: 0;
     left: 0;
     background-color: #273049;
